jvm options for logging gc and oom