@@ -23,11 +23,21 @@ XMX=$(awk '{printf("%d",$1*$2/1024^2)}' <<< " ${MEM} ${JVM_PEER_HEAP_RATIO} ")
 #: ${BIND_ADDR:=$(curl http://169.254.169.254/latest/meta-data/public-ipv4)}
 
 : ${PEER_JAVA_OPTS:='-XX:+UseG1GC -server'}
+SANDBOX=${MESOS_SANDBOX:-"."}
 
 echo "Using profile: ${PROFILE}"
 echo "Starting peer id ${ONYX_ID} with ${NPEERS} peers"
 
 /usr/bin/java $PEER_JAVA_OPTS \
               "-Xmx${XMX}m" \
+              -XX:+HeapDumpOnOutOfMemoryError
+              -XX:HeapDumpPath=$SANDBOX
+              -XX:ErrorFile=$SANDBOX/hs_err_pid_%p.log
+              -Xloggc:$SANDBOX/gc_%p.log
+              -XX:+PrintGCCause
+              -XX:+UseGCLogFileRotation
+              -XX:NumberOfGCLogFiles=3
+              -XX:GCLogFileSize=2M
+              -XX:+PrintGCDateStamps
               -cp /opt/peer.jar \
              kixi.event2s3.core start-peers "$NPEERS" -p $PROFILE -c /opt/config.edn
